--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,8 +68,10 @@
     <Compile Include="Assets\Scripts\Managers\SessionController.cs" />
     <Compile Include="Assets\Scripts\Dog\States\DogWalkState.cs" />
     <Compile Include="Assets\Scripts\Furniture\Furniture.cs" />
+    <Compile Include="Assets\Scripts\Furniture\FurnitureSO\FurnitureSO.cs" />
     <Compile Include="Assets\Scripts\Dog\GroundCheck.cs" />
     <Compile Include="Assets\Scripts\Managers\DataManager.cs" />
+    <Compile Include="Assets\Scripts\Furniture\FurnitureSO\FurnitureCatalogSO.cs" />
     <Compile Include="Assets\Scripts\Dog\States\DogJumpState.cs" />
     <Compile Include="Assets\Scripts\Dog\States\DogChewState.cs" />
     <Compile Include="Assets\Scripts\Dog\DogController.cs" />
@@ -86,8 +88,12 @@
     <Compile Include="Assets\Scripts\Managers\TimerManager.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModuleUnityVersion.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModulePhysics.cs" />
-    <Compile Include="Assets\Scripts\Furniture\FurnitureSO\FurnitureSO.cs" />
-    <Compile Include="Assets\Scripts\Furniture\FurnitureSO\FurnitureCatalogSO.cs" />
+    <Compile Include="Assets\Scripts\Managers\SoundManager.cs" />
+    <Compile Include="Assets\Scripts\SFX\VolumeSlider.cs" />
+    <Compile Include="Assets\Scripts\SFX\ToggleAudio.cs" />
+    <Compile Include="Assets\Scripts\AchievementsController.cs" />
+    <Compile Include="Assets\Scripts\Achievements\AchievementsSOCatalog.cs" />
+    <Compile Include="Assets\Scripts\Achievements\List\AchievementSO.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
