--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,12 +60,15 @@
     <Compile Include="Assets\Scripts\Dog\PeeController.cs" />
     <Compile Include="Assets\Scripts\Dog\States\DogIdleState.cs" />
     <Compile Include="Assets\Scripts\EndScreenController.cs" />
+    <Compile Include="Assets\Scripts\AchievementsController.cs" />
+    <Compile Include="Assets\Scripts\SFX\ToggleAudio.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModuleEPOOutline.cs" />
     <Compile Include="Assets\Scripts\Dog\PoopController.cs" />
     <Compile Include="Assets\Scripts\Dog\States\DogPooState.cs" />
     <Compile Include="Assets\Scripts\Dog\DogStateController.cs" />
     <Compile Include="Assets\Scripts\Dog\States\DogPeeState.cs" />
     <Compile Include="Assets\Scripts\Managers\SessionController.cs" />
+    <Compile Include="Assets\Scripts\Achievements\List\AchievementSO.cs" />
     <Compile Include="Assets\Scripts\Dog\States\DogWalkState.cs" />
     <Compile Include="Assets\Scripts\Furniture\Furniture.cs" />
     <Compile Include="Assets\Scripts\Furniture\FurnitureSO\FurnitureSO.cs" />
@@ -77,23 +80,21 @@
     <Compile Include="Assets\Scripts\Dog\DogController.cs" />
     <Compile Include="Assets\Scripts\Dog\States\DogBaseState.cs" />
     <Compile Include="Assets\Scripts\Managers\ScoreManager.cs" />
+    <Compile Include="Assets\Scripts\SFX\VolumeSlider.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModulePhysics2D.cs" />
     <Compile Include="Assets\Scripts\Dog\MouthController.cs" />
     <Compile Include="Assets\Scripts\Dog\Poop.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModuleUtils.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModuleSprite.cs" />
+    <Compile Include="Assets\Scripts\Achievements\AchievementsSOCatalog.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModuleUI.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModuleAudio.cs" />
     <Compile Include="Assets\Scripts\FaceController.cs" />
+    <Compile Include="Assets\Scripts\Managers\SoundManager.cs" />
     <Compile Include="Assets\Scripts\Managers\TimerManager.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModuleUnityVersion.cs" />
     <Compile Include="Assets\DOTween\Modules\DOTweenModulePhysics.cs" />
-    <Compile Include="Assets\Scripts\Managers\SoundManager.cs" />
-    <Compile Include="Assets\Scripts\SFX\VolumeSlider.cs" />
-    <Compile Include="Assets\Scripts\SFX\ToggleAudio.cs" />
-    <Compile Include="Assets\Scripts\AchievementsController.cs" />
-    <Compile Include="Assets\Scripts\Achievements\AchievementsSOCatalog.cs" />
-    <Compile Include="Assets\Scripts\Achievements\List\AchievementSO.cs" />
+    <Compile Include="Assets\Scripts\Dog\Pee.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
