--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -100,6 +100,8 @@
     <Compile Include="Assets\DOTween\Modules\DOTweenModulePhysics.cs" />
     <Compile Include="Assets\Scripts\Dog\Pee.cs" />
     <Compile Include="Assets\Scripts\UI\Pee\PeeChargeUI.cs" />
+    <Compile Include="Assets\Scripts\TextWriter\TextWriter.cs" />
+    <Compile Include="Assets\Scripts\TextWriter\UI_Assistant.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Cainos\Pixel Art Icon Pack - RPG\Shader\SH UI Icon Outline Color.shader" />
