--- a/Unity.InputSystem.csproj
+++ b/Unity.InputSystem.csproj
@@ -90,9 +90,9 @@
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\PlayerInput\PlayerJoinBehavior.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Events\StateEvent.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Editor\Settings\EditorPlayerSettingHelpers.cs" />
-    <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Utilities\Observables\SelectManyObservable.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Editor\Internal\AdvancedDropdown\CallbackDataSource.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\IInputDiagnostics.cs" />
+    <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Utilities\Observables\SelectManyObservable.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Devices\Precompiled\FastKeyboard.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\XInput\XInputController.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\Users\InputUserPairingOptions.cs" />
@@ -301,8 +301,8 @@
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\XR\Controls\PoseControl.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\Switch\SwitchSupportHID.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\iOS\iOSStepCounter.cs" />
-    <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Actions\IInputActionCollection.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\WebGL\WebGLSupport.cs" />
+    <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Actions\IInputActionCollection.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Devices\Commands\InitiateUserAccountPairingCommand.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Editor\Internal\InputStateWindow.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\UI\TrackedDeviceRaycaster.cs" />
@@ -323,8 +323,8 @@
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Controls\Processors\NormalizeProcessor.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Actions\InputActionPhase.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Devices\Pen.cs" />
-    <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Utilities\SavedState.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\Android\AndroidKeyCode.cs" />
+    <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Utilities\SavedState.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\State\InputStateBlock.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Events\DeviceResetEvent.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Events\InputEventBuffer.cs" />
@@ -355,10 +355,10 @@
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Editor\Internal\GUIHelpers.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\XR\Devices\Oculus.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\InputSystem.cs" />
-    <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Editor\Debugger\InputDeviceDebuggerWindow.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Utilities\StringHelpers.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Devices\Commands\RequestResetCommand.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Utilities\PrimitiveValue.cs" />
+    <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Editor\Debugger\InputDeviceDebuggerWindow.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\InputSystemObject.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Editor\InputParameterEditor.cs" />
     <Compile Include="Library\PackageCache\com.unity.inputsystem@1.3.0\InputSystem\Plugins\iOS\iOSSupport.cs" />
@@ -632,6 +632,12 @@
     </Reference>
     <Reference Include="log4netPlastic">
       <HintPath>Library\PackageCache\com.unity.collab-proxy@1.15.7\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
+    </Reference>
+    <Reference Include="DOTween">
+      <HintPath>Assets\DOTween\DOTween.dll</HintPath>
+    </Reference>
+    <Reference Include="DOTweenEditor">
+      <HintPath>Assets\DOTween\Editor\DOTweenEditor.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>Library\PackageCache\com.unity.nuget.newtonsoft-json@2.0.0\Runtime\Newtonsoft.Json.dll</HintPath>
